Update Scikit Learn Find Best Model.ipynb

--- a/Scikit Learn Find Best Model.ipynb
+++ b/Scikit Learn Find Best Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "id": "8e07d0d0-b5f2-4212-a5bb-be470659ea84",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,7 @@
     "import warnings\n",
     "from numpy import mean\n",
     "from numpy import std\n",
-    "from itertools import combinations\n",
+    "from itertools import combinations, product\n",
     "from matplotlib import pyplot\n",
     "\n",
     "# data engineering\n",
@@ -35,7 +35,8 @@
     "from sklearn.ensemble import BaggingClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.ensemble import ExtraTreesClassifier\n",
-    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from xgboost import XGBClassifier\n",
+    "\n",
     "\n",
     "# regression models\n",
     "from sklearn.linear_model import LinearRegression\n",
@@ -57,7 +58,7 @@
     "from sklearn.ensemble import BaggingRegressor\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.ensemble import ExtraTreesRegressor\n",
-    "from sklearn.ensemble import GradientBoostingRegressor"
+    "from xgboost import XGBRegressor"
    ]
   },
   {
@@ -201,16 +202,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0dcbf495-a9cc-45b5-9864-5b2e560ad837",
+   "metadata": {},
+   "source": [
+    "Create a dictionary of models to test: {'ModelName': ModelObjectReference}"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 42,
    "id": "ec45626e-00d9-4e9a-92c9-476d0bee79e4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a dictionary of models to test: {'ModelName': ModelObjectReference}\n",
-    "def get_classification_models():\n",
-    "    models=dict()\n",
-    "    \n",
+    "def get_classification_models(models=dict()):\n",
+    "\n",
     "    # Linear base learning\n",
     "    models['LogisticRegression'] = LogisticRegression()\n",
     "    \n",
@@ -245,21 +252,18 @@
     "    models['BaggingClassifier'] = BaggingClassifier(n_estimators=n_trees)\n",
     "    models['RandomForestClassifier'] = RandomForestClassifier(n_estimators=n_trees)\n",
     "    models['ExtraTreesClassifier'] = ExtraTreesClassifier(n_estimators=n_trees)\n",
-    "    models['GradientBoostingClassifier'] = GradientBoostingClassifier(n_estimators=n_trees)\n",
     "    \n",
     "    return models"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 43,
    "id": "2b6fb54d-2115-48b8-8492-ada10df2a9ab",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_regression_models():\n",
-    "    models=dict()\n",
-    "    \n",
+    "def get_regression_models(models=dict()):\n",
     "    # Linear Base Learning\n",
     "    models['LinearRegression'] = LinearRegression()\n",
     "    alpha = [0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0]\n",
@@ -302,77 +306,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 44,
    "id": "8001d98c-316d-4ba7-952b-8ebb7fde8221",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'LogisticRegression': LogisticRegression(),\n",
-       " 'RidgeClassifier_(0.1)': RidgeClassifier(alpha=0.1),\n",
-       " 'RidgeClassifier_(0.2)': RidgeClassifier(alpha=0.2),\n",
-       " 'RidgeClassifier_(0.3)': RidgeClassifier(alpha=0.3),\n",
-       " 'RidgeClassifier_(0.4)': RidgeClassifier(alpha=0.4),\n",
-       " 'RidgeClassifier_(0.5)': RidgeClassifier(alpha=0.5),\n",
-       " 'RidgeClassifier_(0.6)': RidgeClassifier(alpha=0.6),\n",
-       " 'RidgeClassifier_(0.7)': RidgeClassifier(alpha=0.7),\n",
-       " 'RidgeClassifier_(0.8)': RidgeClassifier(alpha=0.8),\n",
-       " 'RidgeClassifier_(0.9)': RidgeClassifier(alpha=0.9),\n",
-       " 'RidgeClassifier_(1.0)': RidgeClassifier(),\n",
-       " 'SGDClassifier': SGDClassifier(),\n",
-       " 'PassiveAggressiveClassifier': PassiveAggressiveClassifier(),\n",
-       " 'DecisionTreeClassifier': DecisionTreeClassifier(),\n",
-       " 'ExtraTreeClassifier': ExtraTreeClassifier(),\n",
-       " 'KNeighborsClassifier_(1)': KNeighborsClassifier(n_neighbors=1),\n",
-       " 'KNeighborsClassifier_(2)': KNeighborsClassifier(n_neighbors=2),\n",
-       " 'KNeighborsClassifier_(3)': KNeighborsClassifier(n_neighbors=3),\n",
-       " 'KNeighborsClassifier_(4)': KNeighborsClassifier(n_neighbors=4),\n",
-       " 'KNeighborsClassifier_(5)': KNeighborsClassifier(),\n",
-       " 'KNeighborsClassifier_(6)': KNeighborsClassifier(n_neighbors=6),\n",
-       " 'KNeighborsClassifier_(7)': KNeighborsClassifier(n_neighbors=7),\n",
-       " 'KNeighborsClassifier_(8)': KNeighborsClassifier(n_neighbors=8),\n",
-       " 'KNeighborsClassifier_(9)': KNeighborsClassifier(n_neighbors=9),\n",
-       " 'KNeighborsClassifier_(10)': KNeighborsClassifier(n_neighbors=10),\n",
-       " 'KNeighborsClassifier_(11)': KNeighborsClassifier(n_neighbors=11),\n",
-       " 'KNeighborsClassifier_(12)': KNeighborsClassifier(n_neighbors=12),\n",
-       " 'KNeighborsClassifier_(13)': KNeighborsClassifier(n_neighbors=13),\n",
-       " 'KNeighborsClassifier_(14)': KNeighborsClassifier(n_neighbors=14),\n",
-       " 'KNeighborsClassifier_(15)': KNeighborsClassifier(n_neighbors=15),\n",
-       " 'KNeighborsClassifier_(16)': KNeighborsClassifier(n_neighbors=16),\n",
-       " 'KNeighborsClassifier_(17)': KNeighborsClassifier(n_neighbors=17),\n",
-       " 'KNeighborsClassifier_(18)': KNeighborsClassifier(n_neighbors=18),\n",
-       " 'KNeighborsClassifier_(19)': KNeighborsClassifier(n_neighbors=19),\n",
-       " 'KNeighborsClassifier_(20)': KNeighborsClassifier(n_neighbors=20),\n",
-       " 'LinearSVM': SVC(kernel='linear'),\n",
-       " 'PolynomialSVM': SVC(kernel='poly'),\n",
-       " 'SupportVectorClassifier_(0.1)': SVC(C=0.1),\n",
-       " 'SupportVectorClassifier_(0.2)': SVC(C=0.2),\n",
-       " 'SupportVectorClassifier_(0.3)': SVC(C=0.3),\n",
-       " 'SupportVectorClassifier_(0.4)': SVC(C=0.4),\n",
-       " 'SupportVectorClassifier_(0.5)': SVC(C=0.5),\n",
-       " 'SupportVectorClassifier_(0.6)': SVC(C=0.6),\n",
-       " 'SupportVectorClassifier_(0.7)': SVC(C=0.7),\n",
-       " 'SupportVectorClassifier_(0.8)': SVC(C=0.8),\n",
-       " 'SupportVectorClassifier_(0.9)': SVC(C=0.9),\n",
-       " 'SupportVectorClassifier_(1.0)': SVC(),\n",
-       " 'GaussianNaiveBayes': GaussianNB(),\n",
-       " 'AdaBoostClassifier': AdaBoostClassifier(n_estimators=100),\n",
-       " 'BaggingClassifier': BaggingClassifier(n_estimators=100),\n",
-       " 'RandomForestClassifier': RandomForestClassifier(),\n",
-       " 'ExtraTreesClassifier': ExtraTreesClassifier(),\n",
-       " 'GradientBoostingClassifier': GradientBoostingClassifier()}"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "models = get_classification_models()\n",
     "# models = get_regression_models()\n",
-    "models"
+    "# models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b08c7105-6831-4188-b173-1a4729145480",
+   "metadata": {},
+   "source": [
+    "Gradient Boosting\n",
+    "To do: implement lightgmb & catboost, maybe use GridSearchCV?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "b95ac150-3f77-48d8-9d22-80cb167c68ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_gb_models(models=dict(),*, task):\n",
+    "    learning_rates = [0.001, 0.01, 0.1]  # [0.05, 0.1,0.16]\n",
+    "    n_estimators = [50, 100] # 200\n",
+    "    subsample = [0.5, 0.7, 1.0]\n",
+    "    max_depth = [3, 7, 9] \n",
+    "    # min_child_weight\n",
+    "    \n",
+    "    for cfg in product(learning_rates, n_estimators, subsample, max_depth):\n",
+    "        l, e, s, d = cfg\n",
+    "        if task=='classification':\n",
+    "            models[f'XGBClassifier_{cfg}'] = XGBClassifier(learning_rate=l, n_estimators=e, subsample=s, max_depth=d, n_jobs=-1)\n",
+    "        elif task =='regression':\n",
+    "            models[f'XGBRegressor_{cfg}'] = XGBRegressor(learning_rate=l, n_estimators=e, subsample=s, max_depth=d, n_jobs=-1)\n",
+    "        else:\n",
+    "            raise ValueError('task must be classification, or regression')\n",
+    "    return models"
    ]
   }
  ],
