Update Scikit Learn Find Best Model.ipynb

--- a/Scikit Learn Find Best Model.ipynb
+++ b/Scikit Learn Find Best Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "8e07d0d0-b5f2-4212-a5bb-be470659ea84",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "id": "8b8f2c2c-06fb-4d75-af1f-ec7e37519d57",
    "metadata": {},
    "outputs": [],
@@ -188,16 +188,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 16,
    "id": "7cafad67-2219-4373-9664-e152e76fa6a8",
    "metadata": {},
    "outputs": [],
    "source": [
     "# dummy datasets\n",
-    "def load_dataset():\n",
+    "def load_cla_dataset():\n",
     "    return make_classification(n_samples=1000, n_classes=2, random_state=1)\n",
     "\n",
-    "def load_dataset():\n",
+    "def load_reg_dataset():\n",
     "    return make_regression(n_samples=1000, n_features=50, noise=0.1, random_state=1)"
    ]
   },
@@ -211,12 +211,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "id": "ec45626e-00d9-4e9a-92c9-476d0bee79e4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_classification_models(models=dict()):\n",
+    "def get_cla_models(models=dict()):\n",
     "\n",
     "    # Linear base learning\n",
     "    models['LogisticRegression'] = LogisticRegression()\n",
@@ -258,12 +258,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "id": "2b6fb54d-2115-48b8-8492-ada10df2a9ab",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_regression_models(models=dict()):\n",
+    "def get_reg_models(models=dict()):\n",
     "    # Linear Base Learning\n",
     "    models['LinearRegression'] = LinearRegression()\n",
     "    alpha = [0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0]\n",
@@ -299,14 +299,13 @@
     "    models['BaggingRegression'] = BaggingRegressor(n_estimators=n_trees)\n",
     "    models['RandomForestRegression'] = RandomForestRegressor(n_estimators=n_trees)\n",
     "    models['ExtraTreesRegression'] = ExtraTreesRegressor(n_estimators=n_trees)\n",
-    "    models['GradientBoostingRegression'] = GradientBoostingRegressor(n_estimators=n_trees)\n",
     "    \n",
     "    return models"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "id": "8001d98c-316d-4ba7-952b-8ebb7fde8221",
    "metadata": {},
    "outputs": [],
@@ -327,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "id": "b95ac150-3f77-48d8-9d22-80cb167c68ba",
    "metadata": {},
    "outputs": [],
@@ -348,6 +347,142 @@
     "        else:\n",
     "            raise ValueError('task must be classification, or regression')\n",
     "    return models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ace27ff6-0c19-483b-835d-acc7613940c4",
+   "metadata": {},
+   "source": [
+    "Pipelines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "6a1ba256-9763-4769-82d6-58ff45aa8fd5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pipeline_std(model):\n",
+    "    steps = list()\n",
+    "    steps.append(('standardize', StandardScaler()))\n",
+    "    steps.append(('model', model))\n",
+    "    pipeline = Pipeline(steps=steps)\n",
+    "    return pipeline\n",
+    " \n",
+    "def pipeline_norm(model):\n",
+    "    steps = list()\n",
+    "    steps.append(('normalize', MinMaxScaler()))\n",
+    "    steps.append(('model', model))\n",
+    "    pipeline = Pipeline(steps=steps)\n",
+    "    return pipeline\n",
+    "\n",
+    "def pipeline_std_norm(model):\n",
+    "    steps = list()\n",
+    "    steps.append(('standardize', StandardScaler()))\n",
+    "    steps.append(('normalize', MinMaxScaler()))\n",
+    "    steps.append(('model', model))\n",
+    "    pipeline = Pipeline(steps=steps)\n",
+    "    return pipeline\n",
+    "\n",
+    "pipelines = [pipeline_none, pipeline_standardize, pipeline_normalize, pipeline_std_norm]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04f0d7e6-52b9-4c53-a6d6-88978eff018b",
+   "metadata": {},
+   "source": [
+    "Evaulation Metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "0e09dc9a-fa6f-4bf2-a1a0-17e370e78aba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_model(X, y, model, folds, metric, pipe_func):\n",
+    "    pipeline = pipe_func(model)\n",
+    "    scores = cross_val_score(pipeline, X, y, scoring=metric, cv=folds, n_jobs=-1)\n",
+    "    return scores\n",
+    "\n",
+    "def evaluate_models(X, y, models, pipe_funcs, folds=10, metric='accuracy'):\n",
+    "    results = dict()\n",
+    "    for name, model in models.items():\n",
+    "        for i in range(len(pipe_funcs)):\n",
+    "            scores = evaluate_model(X, y, model, folds, metric, pipe_funcs[i])\n",
+    "\n",
+    "            run_name = str(i) + name\n",
+    "            if scores is not None:\n",
+    "                results[run_name] = scores\n",
+    "                mean_score, std_score = mean(scores), std(scores)\n",
+    "                print('>%s: %.3f (+/-%.3f)' % (run_name, mean_score, std_score))\n",
+    "            else:\n",
+    "                print('>%s: error' % run_name)\n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "1d3fb27f-7aad-4d75-9101-364edd03942b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def summarize_results(results, maximize=True, top_n=10):\n",
+    "    if len(results) == 0:\n",
+    "        print('no results')\n",
+    "        return\n",
+    "    n = min(top_n, len(results))\n",
+    "    mean_scores = [(k,mean(v)) for k,v in results.items()]\n",
+    "    mean_scores = sorted(mean_scores, key=lambda x: x[1])\n",
+    "    if maximize:\n",
+    "        mean_scores = list(reversed(mean_scores))\n",
+    "    names = [x[0] for x in mean_scores[:n]]\n",
+    "    scores = [results[x[0]] for x in mean_scores[:n]]\n",
+    "    print()\n",
+    "    for i in range(n):\n",
+    "        name = names[i]\n",
+    "        mean_score, std_score = mean(results[name]), std(results[name])\n",
+    "        print('Rank=%d, Name=%s, Score=%.3f (+/- %.3f)' % (i+1, name, mean_score, std_score))\n",
+    "    pyplot.boxplot(scores, labels=names)\n",
+    "    _, labels = pyplot.xticks()\n",
+    "    pyplot.setp(labels, rotation=90)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a87a1f4-6c31-4ea0-982e-625b5994c97e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# X, y = load_cla_dataset()\n",
+    "# models = get_cla_models()\n",
+    "# results = evaluate_models(X, y, models, pipelines)\n",
+    "\n",
+    "X, y = load_reg_dataset()\n",
+    "models = get_reg_models()\n",
+    "results = evaluate_models(X, y, models, pipelines, metric='neg_mean_squared_error')\n",
+    "\n",
+    "summarize_results(results)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26ec0a30-a257-4254-aa2e-d70e48306a0c",
+   "metadata": {},
+   "source": [
+    "To do:\n",
+    "- Make te final plot look better\n",
+    "- Add pipeline description\n",
+    "- Rank 10 unique model\n",
+    "- Split get_model functions based on categories\n",
+    "- Implement models listed above\n",
+    "- Try on real life competition from kaggle"
    ]
   }
  ],
